--- a/profiler/templates/profiler/base.html
+++ b/profiler/templates/profiler/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load url from future %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -15,7 +16,7 @@
 
     <script src="{% static 'profiler/jquery-1.7.2.min.js' %}" type="text/javascript"></script>
     <script src="{% static 'profiler/jquery.tablesorter.min.js' %}" type="text/javascript"></script>
-    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.2/d3.min.js"></script>
   </head>
 
   <body>
